dot_parser/DOTParser.py
# Generated from DOT.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class DOTParser ( Parser ):

    grammarFileName = "DOT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'digraph'", "'{'", "'\n'", "'}'", "'['", 
                     "','", "']'", "'->'", "'label'", "'='", "'\"'", "'s0'", 
                     "'shape'", "'height'", "'width'", "'-'", "'_'", "':'", 
                     "'+'", "'|'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "Shape", "Uppercase_letter", "Lowercase_letter", 
                      "Number", "WS" ]

    RULE_graph = 0
    RULE_stmt_list = 1
    RULE_stmt = 2
    RULE_node = 3
    RULE_edge = 4
    RULE_start_node = 5
    RULE_start_edge = 6
    RULE_attr_list = 7
    RULE_id_node = 8
    RULE_string = 9
    RULE_label = 10

    ruleNames =  [ "graph", "stmt_list", "stmt", "node", "edge", "start_node", 
                   "start_edge", "attr_list", "id_node", "string", "label" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    Shape=21
    Uppercase_letter=22
    Lowercase_letter=23
    Number=24
    WS=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class GraphContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(DOTParser.StringContext,0)


        def stmt_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DOTParser.Stmt_listContext)
            else:
                return self.getTypedRuleContext(DOTParser.Stmt_listContext,i)


        def getRuleIndex(self):
            return DOTParser.RULE_graph

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGraph" ):
                listener.enterGraph(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGraph" ):
                listener.exitGraph(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGraph" ):
                return visitor.visitGraph(self)
            else:
                return visitor.visitChildren(self)




    def graph(self):

        localctx = DOTParser.GraphContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_graph)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.match(DOTParser.T__0)
            self.state = 23
            self.string()
            self.state = 24
            self.match(DOTParser.T__1)
            self.state = 25
            self.match(DOTParser.T__2)
            self.state = 27 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 26
                self.stmt_list()
                self.state = 29 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DOTParser.T__10) | (1 << DOTParser.T__11) | (1 << DOTParser.Number))) != 0)):
                    break

            self.state = 31
            self.match(DOTParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(DOTParser.StmtContext,0)


        def getRuleIndex(self):
            return DOTParser.RULE_stmt_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_list" ):
                listener.enterStmt_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_list" ):
                listener.exitStmt_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt_list" ):
                return visitor.visitStmt_list(self)
            else:
                return visitor.visitChildren(self)




    def stmt_list(self):

        localctx = DOTParser.Stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.stmt()
            self.state = 34
            self.match(DOTParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def node(self):
            return self.getTypedRuleContext(DOTParser.NodeContext,0)


        def edge(self):
            return self.getTypedRuleContext(DOTParser.EdgeContext,0)


        def start_node(self):
            return self.getTypedRuleContext(DOTParser.Start_nodeContext,0)


        def start_edge(self):
            return self.getTypedRuleContext(DOTParser.Start_edgeContext,0)


        def getRuleIndex(self):
            return DOTParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = DOTParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 40
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.node()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 37
                self.edge()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 38
                self.start_node()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 39
                self.start_edge()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_node(self):
            return self.getTypedRuleContext(DOTParser.Id_nodeContext,0)


        def attr_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DOTParser.Attr_listContext)
            else:
                return self.getTypedRuleContext(DOTParser.Attr_listContext,i)


        def getRuleIndex(self):
            return DOTParser.RULE_node

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNode" ):
                listener.enterNode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNode" ):
                listener.exitNode(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNode" ):
                return visitor.visitNode(self)
            else:
                return visitor.visitChildren(self)




    def node(self):

        localctx = DOTParser.NodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_node)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.id_node()
            self.state = 43
            self.match(DOTParser.T__4)
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DOTParser.T__8) | (1 << DOTParser.T__12) | (1 << DOTParser.T__13) | (1 << DOTParser.T__14))) != 0):
                self.state = 44
                self.attr_list()
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DOTParser.T__5:
                    self.state = 45
                    self.match(DOTParser.T__5)


                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 53
            self.match(DOTParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EdgeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_node(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DOTParser.Id_nodeContext)
            else:
                return self.getTypedRuleContext(DOTParser.Id_nodeContext,i)


        def label(self):
            return self.getTypedRuleContext(DOTParser.LabelContext,0)


        def getRuleIndex(self):
            return DOTParser.RULE_edge

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEdge" ):
                listener.enterEdge(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEdge" ):
                listener.exitEdge(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEdge" ):
                return visitor.visitEdge(self)
            else:
                return visitor.visitChildren(self)




    def edge(self):

        localctx = DOTParser.EdgeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_edge)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.id_node()
            self.state = 56
            self.match(DOTParser.T__7)
            self.state = 57
            self.id_node()
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DOTParser.T__4:
                self.state = 58
                self.match(DOTParser.T__4)
                self.state = 59
                self.match(DOTParser.T__8)
                self.state = 60
                self.match(DOTParser.T__9)
                self.state = 61
                self.match(DOTParser.T__10)
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DOTParser.T__18) | (1 << DOTParser.T__19) | (1 << DOTParser.Uppercase_letter))) != 0):
                    self.state = 62
                    self.label()


                self.state = 65
                self.match(DOTParser.T__10)
                self.state = 66
                self.match(DOTParser.T__6)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Start_nodeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attr_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DOTParser.Attr_listContext)
            else:
                return self.getTypedRuleContext(DOTParser.Attr_listContext,i)


        def getRuleIndex(self):
            return DOTParser.RULE_start_node

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart_node" ):
                listener.enterStart_node(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart_node" ):
                listener.exitStart_node(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart_node" ):
                return visitor.visitStart_node(self)
            else:
                return visitor.visitChildren(self)




    def start_node(self):

        localctx = DOTParser.Start_nodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_start_node)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(DOTParser.T__11)
            self.state = 70
            self.match(DOTParser.T__4)
            self.state = 71
            self.match(DOTParser.T__8)
            self.state = 72
            self.match(DOTParser.T__9)
            self.state = 73
            self.match(DOTParser.T__10)
            self.state = 74
            self.match(DOTParser.T__10)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DOTParser.T__5) | (1 << DOTParser.T__8) | (1 << DOTParser.T__12) | (1 << DOTParser.T__13) | (1 << DOTParser.T__14))) != 0):
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DOTParser.T__5:
                    self.state = 75
                    self.match(DOTParser.T__5)


                self.state = 78
                self.attr_list()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 84
            self.match(DOTParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Start_edgeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(DOTParser.StringContext,0)


        def Number(self):
            return self.getToken(DOTParser.Number, 0)

        def getRuleIndex(self):
            return DOTParser.RULE_start_edge

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart_edge" ):
                listener.enterStart_edge(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart_edge" ):
                listener.exitStart_edge(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart_edge" ):
                return visitor.visitStart_edge(self)
            else:
                return visitor.visitChildren(self)




    def start_edge(self):

        localctx = DOTParser.Start_edgeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_start_edge)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(DOTParser.T__11)
            self.state = 87
            self.match(DOTParser.T__7)
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DOTParser.T__10]:
                self.state = 88
                self.match(DOTParser.T__10)
                self.state = 89
                self.string()
                self.state = 90
                self.match(DOTParser.T__10)
                pass
            elif token in [DOTParser.Number]:
                self.state = 92
                self.match(DOTParser.Number)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def label(self):
            return self.getTypedRuleContext(DOTParser.LabelContext,0)


        def Shape(self):
            return self.getToken(DOTParser.Shape, 0)

        def string(self):
            return self.getTypedRuleContext(DOTParser.StringContext,0)


        def Number(self):
            return self.getToken(DOTParser.Number, 0)

        def getRuleIndex(self):
            return DOTParser.RULE_attr_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr_list" ):
                listener.enterAttr_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr_list" ):
                listener.exitAttr_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttr_list" ):
                return visitor.visitAttr_list(self)
            else:
                return visitor.visitChildren(self)




    def attr_list(self):

        localctx = DOTParser.Attr_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attr_list)
        self._la = 0 # Token type
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DOTParser.T__8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.match(DOTParser.T__8)
                self.state = 96
                self.match(DOTParser.T__9)
                self.state = 97
                self.match(DOTParser.T__10)
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DOTParser.T__18) | (1 << DOTParser.T__19) | (1 << DOTParser.Uppercase_letter))) != 0):
                    self.state = 98
                    self.label()


                self.state = 101
                self.match(DOTParser.T__10)
                pass
            elif token in [DOTParser.T__12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(DOTParser.T__12)
                self.state = 103
                self.match(DOTParser.T__9)
                self.state = 104
                self.match(DOTParser.Shape)
                pass
            elif token in [DOTParser.T__13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 105
                self.match(DOTParser.T__13)
                self.state = 106
                self.match(DOTParser.T__9)
                self.state = 112
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [DOTParser.T__10]:
                    self.state = 107
                    self.match(DOTParser.T__10)
                    self.state = 108
                    self.string()
                    self.state = 109
                    self.match(DOTParser.T__10)
                    pass
                elif token in [DOTParser.Number]:
                    self.state = 111
                    self.match(DOTParser.Number)
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [DOTParser.T__14]:
                self.enterOuterAlt(localctx, 4)
                self.state = 114
                self.match(DOTParser.T__14)
                self.state = 115
                self.match(DOTParser.T__9)
                self.state = 121
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [DOTParser.T__10]:
                    self.state = 116
                    self.match(DOTParser.T__10)
                    self.state = 117
                    self.string()
                    self.state = 118
                    self.match(DOTParser.T__10)
                    pass
                elif token in [DOTParser.Number]:
                    self.state = 120
                    self.match(DOTParser.Number)
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_nodeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Number(self):
            return self.getToken(DOTParser.Number, 0)

        def string(self):
            return self.getTypedRuleContext(DOTParser.StringContext,0)


        def getRuleIndex(self):
            return DOTParser.RULE_id_node

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_node" ):
                listener.enterId_node(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_node" ):
                listener.exitId_node(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_node" ):
                return visitor.visitId_node(self)
            else:
                return visitor.visitChildren(self)




    def id_node(self):

        localctx = DOTParser.Id_nodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_id_node)
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DOTParser.Number]:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.match(DOTParser.Number)
                pass
            elif token in [DOTParser.T__10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.match(DOTParser.T__10)
                self.state = 127
                self.string()
                self.state = 128
                self.match(DOTParser.T__10)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Uppercase_letter(self, i:int=None):
            if i is None:
                return self.getTokens(DOTParser.Uppercase_letter)
            else:
                return self.getToken(DOTParser.Uppercase_letter, i)

        def Lowercase_letter(self, i:int=None):
            if i is None:
                return self.getTokens(DOTParser.Lowercase_letter)
            else:
                return self.getToken(DOTParser.Lowercase_letter, i)

        def Number(self, i:int=None):
            if i is None:
                return self.getTokens(DOTParser.Number)
            else:
                return self.getToken(DOTParser.Number, i)

        def getRuleIndex(self):
            return DOTParser.RULE_string

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)




    def string(self):

        localctx = DOTParser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_string)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 132
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DOTParser.T__5) | (1 << DOTParser.T__15) | (1 << DOTParser.T__16) | (1 << DOTParser.Uppercase_letter) | (1 << DOTParser.Lowercase_letter) | (1 << DOTParser.Number))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 135 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DOTParser.T__5) | (1 << DOTParser.T__15) | (1 << DOTParser.T__16) | (1 << DOTParser.Uppercase_letter) | (1 << DOTParser.Lowercase_letter) | (1 << DOTParser.Number))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DOTParser.RULE_label

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ForkContext(LabelContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DOTParser.LabelContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFork" ):
                listener.enterFork(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFork" ):
                listener.exitFork(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFork" ):
                return visitor.visitFork(self)
            else:
                return visitor.visitChildren(self)


    class InteractionContext(LabelContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DOTParser.LabelContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Uppercase_letter(self, i:int=None):
            if i is None:
                return self.getTokens(DOTParser.Uppercase_letter)
            else:
                return self.getToken(DOTParser.Uppercase_letter, i)
        def Lowercase_letter(self, i:int=None):
            if i is None:
                return self.getTokens(DOTParser.Lowercase_letter)
            else:
                return self.getToken(DOTParser.Lowercase_letter, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteraction" ):
                listener.enterInteraction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteraction" ):
                listener.exitInteraction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInteraction" ):
                return visitor.visitInteraction(self)
            else:
                return visitor.visitChildren(self)


    class ChoiceContext(LabelContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DOTParser.LabelContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChoice" ):
                listener.enterChoice(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChoice" ):
                listener.exitChoice(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChoice" ):
                return visitor.visitChoice(self)
            else:
                return visitor.visitChildren(self)



    def label(self):

        localctx = DOTParser.LabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_label)
        self._la = 0 # Token type
        try:
            self.state = 148
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DOTParser.Uppercase_letter]:
                localctx = DOTParser.InteractionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.match(DOTParser.Uppercase_letter)
                self.state = 138
                self.match(DOTParser.T__7)
                self.state = 139
                self.match(DOTParser.Uppercase_letter)
                self.state = 140
                self.match(DOTParser.T__17)
                self.state = 142 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 141
                    self.match(DOTParser.Lowercase_letter)
                    self.state = 144 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==DOTParser.Lowercase_letter):
                        break

                pass
            elif token in [DOTParser.T__18]:
                localctx = DOTParser.ChoiceContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.match(DOTParser.T__18)
                pass
            elif token in [DOTParser.T__19]:
                localctx = DOTParser.ForkContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 147
                self.match(DOTParser.T__19)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





